[package]
name = "twitcast-comment-retriever"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
